deleted z-index from button up, menu; added position fixed to footer

--- a/src/layout.module.css
+++ b/src/layout.module.css
@@ -12,7 +12,7 @@ body {
 }
 
 .footer {
-    position: relative;
+    position: fixed;
     bottom: 0;
     left: 0;
     padding: 0 0 0 5px;
